# arena-hnswlib

./: .cnb.yml  .codebuddy  .copilot-instructions.json  .devcontainer  .dockerignore  .gitignore  .ide  CMakeLists.txt  CNB_DOCKER_README.md  Dockerfile  README.md  setup.py
.codebuddy/: README.md  agents  config.json  skills
.codebuddy/agents/: Planner.agent.md  Planner2.md
.codebuddy/instructions/: project-conventions.instructions.md
.codebuddy/rules/: copilotRules.mdc
.configs/: README.md  cnb.yml
.configs/codebuddy/: instructions
.configs/github/workflows/: sync-to-cnb.yml
.devcontainer/: Dockerfile  Dockerfile.base  Dockerfile.cnb  Dockerfile.codespace  devcontainer.json  github-universal-dockerfile-backup.dockerfile
.devcontainer/scripts/: setup-zsh.sh
.github/agents/: Planner.agent.md
.github/copilot/: instructions.md
.github/workflows/: build-and-push-base-image.yml  build-base-image.yml  ci.yml  sync-to-cnb.yml
.ide/: Dockerfile
arena_hnswlib/: __init__.py
benchmarks/: EXAMPLE.md  README.md  benchmark_index.cpp  benchmark_math_utils.cpp
include/arena-hnswlib/: aligned_vector.h  arena_hnswlib.h  bruteforce.h  data_store.h  hnswalg.h  math_utils.h  space_ip.h  space_l2.h
logs/: benchmark_after.txt  benchmark_before.txt  benchmark_debug.txt  benchmark_release.txt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: TASK001-ProjectSetup.md  TASK002-SupportSpaceL2.md  TASK003-BenchmarkBruteforceVsHNSWalg.md  TASK004-AlignedVector.md  TASK004.md  TASK005-PythonBindingsAndVDBBenchClient.md  TASK006-VisitedSetOptimization.md  TASK007-FixRedundantLevel0Search.md  TASK008-SpaceTemplateParam.md  TASK009-SIMDInnerProduct.md  TASK010-VisitedTablePerRequest.md  TASK011-FixAddPointPerformance.md  TASK012.md  TASK014.md  TASK015.md  TASK_TEMPLATE.md  _index.md
python/: bindings.cpp
python/arena_hnswlib/: vdbbench_client.py
scripts/: build.sh  build_and_test.sh  docker-cnb.sh  docker-dev.sh  run_benchmarks.sh  run_test.sh
tests/python/: benchmark_simple.py  test_quick_bench.py  test_vectordbbench_client.py
tests/unit/: CMakeLists.txt  test_aligned_vector.cpp  test_arena_hnswlib.cpp  test_bruteforce.cpp  test_concurrent.cpp  test_data_store.cpp  test_hnswalg.cpp  test_math_utils.cpp  test_space_ip.cpp  test_space_l2.cpp
